--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,5 +3,7 @@
         <app-shopping-edit></app-shopping-edit>
     </div>
     <hr>
-    <p>The list</p>
+    <ul class="list-group">
+        <a class="list-group-item" style="cursor: pointer"></a>
+    </ul>
 </div>
